--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                OpenLayers.ProxyHost="/proxy/?url=";
                map = new OpenLayers.Map('map');
                layer = new OpenLayers.Layer.WMS( "OpenLayers WMS",
-                   "http://vmap0.tiles.osgeo.org/wms/vmap0", {layers: 'basic'} );
+                   "https://vmap0.tiles.osgeo.org/wms/vmap0", {layers: 'basic'} );
 
                map.addLayer(layer);
                map.setCenter(new OpenLayers.LonLat(0, 0), 0);
@@ -23,7 +23,7 @@
 
                var size = new OpenLayers.Size(21,25);
                var offset = new OpenLayers.Pixel(-(size.w/2), -size.h);
-               var icon = new OpenLayers.Icon('http://www.openlayers.org/dev/img/marker.png',size,offset);
+               var icon = new OpenLayers.Icon('https://www.openlayers.org/dev/img/marker.png',size,offset);
                markers.addMarker(new OpenLayers.Marker(new OpenLayers.LonLat(0,0),icon));
 
                var halfIcon = icon.clone();
